feat: integrate GitNexus code intelligence and MCP skill workflows (#124)
This commit introduces GitNexus integration to enhance code understanding, impact analysis, and safe refactoring via MCP tools. It adds comprehensive skill definitions for AI agents and establishes operational guidelines in the repository documentation.

* feat: add GitNexus skill definitions for specialized engineering workflows

Add detailed Markdown skill files under `.claude/skills/gitnexus/` covering:
- `exploring`: Architecture discovery and execution flow tracing
- `debugging`: Error tracing and root cause analysis patterns
- `impact-analysis`: Safety checks and blast radius assessment
- `refactoring`: Automated renames and structural changes
- `gitnexus-cli`: Index management and documentation generation
- `gitnexus-guide`: General tool and schema reference

* docs: establish AI agent guidelines in CLAUDE.md and AGENTS.md

- Add "GitNexus — Code Intelligence" section to `CLAUDE.md` and create `AGENTS.md`
- Define mandatory protocols for agents: impact analysis must be performed before any symbol modification
- Define "Never Do" rules to prevent unsafe find-and-replace or ignoring high-risk warnings
- Provide quick links to GitNexus resources (clusters, processes, traces)

* refactor: modernize immutable list creation in SessionCreationGuide

Update `SessionCreationGuide` compact constructor to use `List.copyOf()` for `availablePlugins` and `commonErrors`. This replaces the more verbose `Collections.unmodifiableList(new ArrayList<>(...))` pattern while ensuring null-safety and immutability.

* chore: update environment configuration and ignored files

- Add `.gitnexus` to `.gitignore` to prevent local index data from being tracked
- Initialize `.ai/mcp/mcp.json` for MCP-related configuration